28. Input: adicionando estilos de CSS para input ativo, em foco e desativado

--- a/section-2/chronos-pomodoro/src/components/InputCustom/styles.module.css
+++ b/section-2/chronos-pomodoro/src/components/InputCustom/styles.module.css
@@ -1,7 +1,7 @@
 .label {
 }
 
-.input_text {
+.input {
   background-color: transparent;
   text-align: center;
   font-size: 1.8rem;
@@ -13,8 +13,19 @@
   transition: all 0.2s ease-in-out;
 }
 
-.input_text::placeholder {
+.input::placeholder {
   color: var(--gray-500);
   font-size: 1.4rem;
   font-style: italic;
+}
+
+.input:focus {
+  border-radius: 0.8rem;
+  border: 0.2rem solid var(--primary);
+}
+
+.input:disabled {
+  border-bottom-color: var(--disabled);
+  color: var(--text-muted);
+  cursor: no-drop;
 }
