--- a/section-2/chronos-pomodoro/src/components/Footer/styles.module.css
+++ b/section-2/chronos-pomodoro/src/components/Footer/styles.module.css
@@ -1,9 +1,18 @@
 .container {
   width: 100%;
-  padding: 3.2rem;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1.6rem;
+}
+
+.link {
+  font-size: 1.2rem;
+  color: var(--text-muted);
+}
+
+.link:not(:hover) {
+  text-decoration: none;
 }
