37. useEffect - hook feito para trabalhar com efeitos colaterais no componente

--- a/section-2/chronos-pomodoro/src/components/NavigationItem/styles.module.css
+++ b/section-2/chronos-pomodoro/src/components/NavigationItem/styles.module.css
@@ -6,6 +6,7 @@
 .link {
   padding: 1.2rem;
   border-radius: 0.8rem;
+  border: none;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,6 +14,7 @@
   background-color: var(--primary);
   color: var(--text-hover-primary);
   transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .link:hover {
