59. Como iterar elementos JSX e usar a prop key no React (do jeito certo)

--- a/section-2/chronos-pomodoro/src/components/Cycles/styles.module.css
+++ b/section-2/chronos-pomodoro/src/components/Cycles/styles.module.css
@@ -22,14 +22,14 @@
   border-radius: 50%;
 }
 
-.item_work {
+.workTime {
   background: var(--warning);
 }
 
-.item_short_rest {
+.shortBreakTime {
   background-color: var(--primary);
 }
 
-.item_long_rest {
+.longBreakTime {
   background: var(--info);
 }
