82. Criando a estrutura e CSS da página History (Histórico)

--- a/section-2/chronos-pomodoro/src/components/NavigationItem/styles.module.css
+++ b/section-2/chronos-pomodoro/src/components/NavigationItem/styles.module.css
@@ -12,7 +12,7 @@
   justify-content: center;
   text-decoration: none;
   background-color: var(--primary);
-  color: var(--text-hover-primary);
+  color: var(--text-over-primary);
   transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
