88. Reordenando a tabela do histórico ao clicar th (no cabeçalho)

--- a/section-2/chronos-pomodoro/src/pages/History/styles.module.css
+++ b/section-2/chronos-pomodoro/src/pages/History/styles.module.css
@@ -35,3 +35,24 @@
   border-bottom: 0.2rem solid var(--gray-700);
   padding: 1.6rem;
 }
+
+.thSort {
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.thSort:hover {
+  filter: brightness(80%);
+}
+
+.thSortContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
+
+.thSortIcon {
+  width: 18px;
+  height: 18px;
+}
