--- a/section-2/chronos-pomodoro/src/components/InputCustom/styles.module.css
+++ b/section-2/chronos-pomodoro/src/components/InputCustom/styles.module.css
@@ -6,11 +6,15 @@
   text-align: center;
   font-size: 1.8rem;
   padding: 0.8rem;
+  margin: 0;
   color: var(--text-default);
   outline: none;
   border: 0.2rem solid transparent;
   border-bottom: 0.2rem solid var(--primary);
   transition: all 0.2s ease-in-out;
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .input::placeholder {
